# templates-autotools-rrbuildutils-gstreamer

./: .gitignore  Makefile.am  README.md  configure.ac
common/m4/: rr-test.m4
ext/TODO/: Makefile.am  gstTODOplugin.c
gst-libs/gst/: Makefile.am
gst-libs/gst/TODO/: Makefile.am
tests/: Makefile.am
tests/check/: Makefile.am  gstTODO_multiple_transitions.cpp  tests.cpp
tests/examples/: Makefile.am  example.cpp
tools/: Makefile.am  gstTODO.c
