plugin_LTLIBRARIES = libgstTODO.la

# sources used to compile this plug-in
libgstTODO_la_SOURCES = gstTODOplugin.c gstTODO.c gstTODO.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstTODO_la_CFLAGS = $(GST_CFLAGS)
libgstTODO_la_LIBADD = $(GST_LIBS)
libgstTODO_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

